--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.yuneec.android.mapexplorer.settings.MyApplication"
+        >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
